--- a/.env.example
+++ b/.env.example
@@ -237,14 +237,15 @@ N8N_ENABLED=false
 EVOAI_ENABLED=false
 
 # Cache - Environment variables
-# Redis Cache enabled
-CACHE_REDIS_ENABLED=true
-CACHE_REDIS_URI=redis://localhost:6379/6
+# Redis Cache f
+CACHE_REDIS_ENABLED=false
+CACHE_REDIS_URI=redis://redis:6379
+
 CACHE_REDIS_TTL=604800
 # Prefix serves to differentiate data from one installation to another that are using the same redis
 CACHE_REDIS_PREFIX_KEY=evolution
 # Enabling this variable will save the connection information in Redis and not in the database.
-CACHE_REDIS_SAVE_INSTANCES=false
+CACHE_REDIS_SAVE_INSTANCES=true
 # Local Cache enabled
 CACHE_LOCAL_ENABLED=false
 
