--- a/.env
+++ b/.env
@@ -213,7 +213,7 @@ TYPEBOT_ENABLED=false
 TYPEBOT_API_VERSION=latest
 
 # Chatwoot - Environment variables
-CHATWOOT_ENABLED=false
+CHATWOOT_ENABLED=true
 # If you leave this option as false, when deleting the message for everyone on WhatsApp, it will not be deleted on Chatwoot.
 CHATWOOT_MESSAGE_READ=true
 # If you leave this option as true, when sending a message in Chatwoot, the client's last message will be marked as read on WhatsApp.
@@ -291,6 +291,8 @@ LANGUAGE=en
 # Define a global proxy to be used if the instance does not have one
 # PROXY_HOST=
 # PROXY_PORT=80
+
+
 # PROXY_PROTOCOL=http
 # PROXY_USERNAME=
 # PROXY_PASSWORD=
